--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>課題13</title>
   </head>
   <body>
+    <nav>
+      <form id="form">
+        <section name="select">
+          <option value="index.html>メインページ</option>
+          <option value="other.html>別のページ</option>
+        </section>
+      </form>
+    </nav>
     <section>
       <p id="countdown"></p>
     </section>
