--- a/other.html
+++ b/other.html
@@ -7,10 +7,10 @@
   <body>
     <nav>
       <form id="form">
-        <section name="select">
+        <select name="select">
           <option value="index.html>メインページ</option>
           <option value="other.html>別のページ</option>
-        </section>
+        </select>
       </form>
     </nav>
     <section>
