--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/defaulu.css">
     <title>課題13</title>
   </head>
   <body>
