--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <section class="image">
     <div class="centre">
       <div>
-        <img src="img/cat1.png" id="bigimg">
+        <img src="img/cat1.jpg" id="bigimg">
       </div>
       <ul>
-        <li><ikg src="img/thumb-cat1.png" class="thumb" date-image="cat1"></li>
+        <li><ikg src="img/thumb-cat1.jpg" class="thumb" date-image="cat1"></li>
         <li><ikg src="img/thumb-cat2.jpg" class="thumb" date-image="cat2"></li>
         <li><ikg src="img/thumb-cat3.jpg" class="thumb" date-image="cat3"></li>
       </ul>
