--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <img src="img/cat1.jpg" id="bigimg">
       </div>
       <ul>
-        <li><ikg src="img/thumb-cat1.jpg" class="thumb" date-image="cat1"></li>
-        <li><ikg src="img/thumb-cat2.jpg" class="thumb" date-image="cat2"></li>
-        <li><ikg src="img/thumb-cat3.jpg" class="thumb" date-image="cat3"></li>
+        <li><img src="img/thumb-cat1.jpg" class="thumb" date-image="cat1"></li>
+        <li><img src="img/thumb-cat2.jpg" class="thumb" date-image="cat2"></li>
+        <li><img src="img/thumb-cat3.jpg" class="thumb" date-image="cat3"></li>
       </ul>
       </div>
     </section>
