--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>課題13</title>
   </head>
   <body>
+    <nav>
+      <form id="form">
+        <select name="select">
+          <option value="index.html>メインページ</option>
+          <option value="other.html>別のページ</option>
+        </select>
+      </form>
+    </nav>
     <h1>カウントダウンタイマー</h1>
     <section>
       <p id="countdown"></p>
