--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
       <form id="form">
         <select name="select">
-          <option value="index.html>メインページ</option>
+          <option value="index.html">メインページ</option>
           <option value="other.html>別のページ</option>
         </select>
       </form>
