--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <form id="form">
         <select name="select">
           <option value="index.html">メインページ</option>
-          <option value="other.html>別のページ</option>
+          <option value="other.html">別のページ</option>
         </select>
       </form>
     </nav>
