--- a/other.html
+++ b/other.html
@@ -8,8 +8,8 @@
     <nav>
       <form id="form">
         <select name="select">
-          <option value="index.html>メインページ</option>
-          <option value="other.html>別のページ</option>
+          <option value="index.html">メインページ</option>
+          <option value="other.html">別のページ</option>
         </select>
       </form>
     </nav>
