--- a/index.html
+++ b/index.html
@@ -19,5 +19,17 @@
       <p id="countdown"></p>
     </section>
     <script type="text/javascript" src="js/default.js"></script>
+    <section class="image">
+    <div class="centre">
+      <div>
+        <img src="img/cat1.jpg" id="bigimg">
+      </div>
+      <ul>
+        <li><img src="img/thumb-cat1.jpg" class="thumb" date-image="cat1"></li>
+        <li><img src="img/thumb-cat2.jpg" class="thumb" date-image="cat2"></li>
+        <li><img src="img/thumb-cat3.jpg" class="thumb" date-image="cat3"></li>
+      </ul>
+      </div>
+    </section>
   </body>
 </html>
