--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="js/default.js"></script>
     
     <section class="image">
-    <div class="centre">
+    <div class="center">
       <div>
         <img src="img/cat1.jpg" id="bigimg">
       </div>
